spacing fix.

--- a/src/app/posts/post-create/post-create.component.css
+++ b/src/app/posts/post-create/post-create.component.css
@@ -2,3 +2,11 @@ mat-form-field,
 textarea {
   width: 100%;
 }
+
+mat-error {
+  font-size: 0.7rem;
+}
+
+button {
+  margin-top: 20px;
+}
